--- a/public/css/app.css
+++ b/public/css/app.css
@@ -886,6 +886,12 @@ select{
 .mb-1{
   margin-bottom: 0.25rem;
 }
+.ml-auto{
+  margin-left: auto;
+}
+.mr-3{
+  margin-right: 0.75rem;
+}
 .block{
   display: block;
 }
@@ -976,6 +982,9 @@ select{
 .w-12{
   width: 3rem;
 }
+.w-10{
+  width: 2.5rem;
+}
 .max-w-6xl{
   max-width: 72rem;
 }
@@ -1028,6 +1037,11 @@ select{
 .list-disc{
   list-style-type: disc;
 }
+.appearance-none{
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -1076,6 +1090,9 @@ select{
 }
 .rounded-md{
   border-radius: 0.375rem;
+}
+.rounded-full{
+  border-radius: 9999px;
 }
 .rounded-l-md{
   border-top-left-radius: 0.375rem;
@@ -1225,6 +1242,9 @@ select{
 .p-6{
   padding: 1.5rem;
 }
+.p-0{
+  padding: 0px;
+}
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1307,6 +1327,9 @@ select{
 .pt-8{
   padding-top: 2rem;
 }
+.pr-10{
+  padding-right: 2.5rem;
+}
 .text-left{
   text-align: left;
 }
@@ -1383,6 +1406,9 @@ select{
 }
 .leading-tight{
   line-height: 1.25;
+}
+.leading-relaxed{
+  line-height: 1.625;
 }
 .tracking-wide{
   letter-spacing: 0.025em;
@@ -1774,6 +1800,9 @@ select{
   }
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .md\:justify-around{
+    justify-content: space-around;
   }
   .md\:border-l{
     border-left-width: 1px;
