--- a/public/css/app.css
+++ b/public/css/app.css
@@ -835,6 +835,9 @@ select{
 .-mt-px{
   margin-top: -1px;
 }
+.mb-1{
+  margin-bottom: 0.25rem;
+}
 .mb-12{
   margin-bottom: 3rem;
 }
@@ -859,8 +862,14 @@ select{
 .ml-4{
   margin-left: 1rem;
 }
+.ml-auto{
+  margin-left: auto;
+}
 .mr-2{
   margin-right: 0.5rem;
+}
+.mr-3{
+  margin-right: 0.75rem;
 }
 .mt-1{
   margin-top: 0.25rem;
@@ -882,15 +891,6 @@ select{
 }
 .mt-8{
   margin-top: 2rem;
-}
-.mb-1{
-  margin-bottom: 0.25rem;
-}
-.ml-auto{
-  margin-left: auto;
-}
-.mr-3{
-  margin-right: 0.75rem;
 }
 .block{
   display: block;
@@ -946,6 +946,9 @@ select{
 .w-1\/4{
   width: 25%;
 }
+.w-12{
+  width: 3rem;
+}
 .w-16{
   width: 4rem;
 }
@@ -978,12 +981,6 @@ select{
 }
 .w-full{
   width: 100%;
-}
-.w-12{
-  width: 3rem;
-}
-.w-10{
-  width: 2.5rem;
 }
 .max-w-6xl{
   max-width: 72rem;
@@ -1076,6 +1073,11 @@ select{
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
 .overflow-auto{
   overflow: auto;
 }
@@ -1090,9 +1092,6 @@ select{
 }
 .rounded-md{
   border-radius: 0.375rem;
-}
-.rounded-full{
-  border-radius: 9999px;
 }
 .rounded-l-md{
   border-top-left-radius: 0.375rem;
@@ -1242,9 +1241,6 @@ select{
 .p-6{
   padding: 1.5rem;
 }
-.p-0{
-  padding: 0px;
-}
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1309,6 +1305,9 @@ select{
 .pl-3{
   padding-left: 0.75rem;
 }
+.pr-10{
+  padding-right: 2.5rem;
+}
 .pr-4{
   padding-right: 1rem;
 }
@@ -1326,9 +1325,6 @@ select{
 }
 .pt-8{
   padding-top: 2rem;
-}
-.pr-10{
-  padding-right: 2.5rem;
 }
 .text-left{
   text-align: left;
@@ -1404,11 +1400,11 @@ select{
 .leading-normal{
   line-height: 1.5;
 }
-.leading-tight{
-  line-height: 1.25;
-}
 .leading-relaxed{
   line-height: 1.625;
+}
+.leading-tight{
+  line-height: 1.25;
 }
 .tracking-wide{
   letter-spacing: 0.025em;
@@ -1565,6 +1561,7 @@ select{
 .ease-out{
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
+@tailwind swiper;
 .hover\:border-gray-300:hover{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
@@ -1869,5 +1866,5 @@ select{
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1));
   }
-}
+} 
 
