--- a/public/css/app.css
+++ b/public/css/app.css
@@ -826,6 +826,10 @@ select{
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 .-ml-px{
   margin-left: -1px;
 }
@@ -934,6 +938,9 @@ select{
 .h-8{
   height: 2rem;
 }
+.h-40{
+  height: 10rem;
+}
 .min-h-screen{
   min-height: 100vh;
 }
@@ -981,6 +988,9 @@ select{
 }
 .w-full{
   width: 100%;
+}
+.w-40{
+  width: 10rem;
 }
 .max-w-6xl{
   max-width: 72rem;
@@ -1092,6 +1102,9 @@ select{
 }
 .rounded-md{
   border-radius: 0.375rem;
+}
+.rounded-full{
+  border-radius: 9999px;
 }
 .rounded-l-md{
   border-top-left-radius: 0.375rem;
@@ -1211,6 +1224,10 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
+.bg-gray-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
+}
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
 }
@@ -1231,6 +1248,10 @@ select{
 }
 .fill-current{
   fill: currentColor;
+}
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .p-2{
   padding: 0.5rem;
@@ -1593,6 +1614,10 @@ select{
 .hover\:bg-red-500:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+.hover\:bg-gray-300:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
 }
 .hover\:text-gray-400:hover{
   --tw-text-opacity: 1;
